--- a/hosted/index.html
+++ b/hosted/index.html
@@ -23,14 +23,25 @@
   <header id="head">
   
   </header>
-  <main id="main">
   
+  <main id="main">
+    <div id="rendered">
+    
+    </div>
+    <div id="rendering" class="hidden">
+    
+    </div>
   </main>
-  <footer id="foot">
+  
+  <div class="space-gap grey darken-4"></div>
+  
+  <footer id="foot" class="page-footer">
   
   </footer>
   
-  <script src="/assets/js/helper/helper.js"></script>
-  <script src="/assets/js/generic/generic.js"></script>
+  <script src="/assets/js/helper.js"></script>
+  <script src="/assets/js/navigation.js"></script>
+  <script src="/assets/js/login.js"></script>
+  <script src="/assets/js/main.js"></script>
 </body>
 </html>
