--- a/hosted/index.html
+++ b/hosted/index.html
@@ -42,6 +42,8 @@
   <script src="/assets/js/helper.js"></script>
   <script src="/assets/js/navigation.js"></script>
   <script src="/assets/js/login.js"></script>
+  <script src="/assets/js/profile.js"></script>
+  <script src="/assets/js/about.js"></script>
   <script src="/assets/js/main.js"></script>
 </body>
 </html>
